# rust-poly-logger

./: Cargo.toml  README
examples/: doc_poly.rs  file.rs  gen_stderr.rs  invalid_fmt.rs  main.rs  poly.rs  poly2.rs  stderr.rs  stderr_simple.rs  stdout.rs  terminal.rs
src/: gen_logger.rs  instance.rs  lib.rs  log_formatter.rs  loggers.rs  poly_logger.rs
src/loggers/: file_logger.rs  log_formatter.rs  terminal_logger.rs
