[package]
name = "poly_logger"
version = "0.1.0"
authors = ["David Sutherland <davethecanuck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version="0.4.8", features=["std"] }
chrono = "0.4.15"
strfmt = "0.1.6"
